--- a/index.html
+++ b/index.html
@@ -1,265 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Website - Easy Tutorials</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-..."
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-
-
-</head>
-
-<body>
+  <body>
     <div id="header">
-        <div class="container">
-
-            <nav>
-                <div class="logo">
-                    <p>R<span>ach_el.</span></p>
-                </div>
-
-                <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <i class="fas fa-times" onclick="closemenu()"></i>
-                </ul>
-                <i class="fas fa-bars" onclick="openmenu()"></i>
-
-            </nav>
-        </div>
+      <div class="container">
+        <nav>
+          <div class="logo">
+            <p>R<span>ach_el.</span></p>
+          </div>
+          <ul id="sidemenu">
+            <li><a href="#header">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <i class="fas fa-times" onclick="closemenu()"></i>
+          </ul>
+          <i class="fas fa-bars" onclick="openmenu()"></i>
+        </nav>
+      </div>
     </div>
+
     <section class="a">
-        <div class="b">
-            <div class="text">
-                <div class="header-text">
-                    <p>A FullStack Developer</p>
-                    <h1>Hi, I'm <span>Rachel</span><br>Ingabire From Rwanda</h1>
-                </div>
-            </div>
-            <div class="image">
-                <img src="./images/background.png" alt="">
-            </div>
+      <div class="b">
+        <div class="text">
+          <div class="header-text">
+            <p>A FullStack Developer</p>
+            <h1>Hi, I'm <span>Rachel</span><br />Ingabire From Rwanda</h1>
+          </div>
         </div>
+        <div class="image">
+          <img src="./images/background.png" alt="" />
+        </div>
+      </div>
     </section>
 
-
-
-    <!-- //////////////////about............... -->
-
-
+    <!-- About Section -->
     <div id="about">
-
-        <div class="container">
-            <div class="row">
-                <div class="about-col-1">
-                    <img src="images/last.jpg" alt="">
-                </div>
-                <div class="about-col-2">
-                    <h1 class="sub-title">About Me
-
-                    </h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime dolor accusamus iusto
-                        corporis, at quaerat modi. Ipsam accusantium a saepe.</p>
-                    <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                        <p class="tab-links" onclick="opentab('education')">Education</p>
-
-                    </div>
-                    <div class="tab-contents active-tab" id="skills">
-                        <ul>
-                            <li><span>UI/UX</span><br>Designing Web/App interface</li>
-                            <li><span>Web Development</span><br>Web app development</li>
-                            <li><span>App Development</span><br>Building Android/IOS apps</li>
-
-                        </ul>
-
-                    </div>
-                    <div class="tab-contents" Id="experience">
-                        <ul>
-                            <li><span>2021</span><br>Networking At IPRC NGOMA</li>
-                            <li><span>2019-2021</span><br>UI/UX Design at NOVA SERVICES LTD</li>
-                            <li><span>2016-2017</span><br>Internership at RISA</li>
-
-                        </ul>
-
-                    </div>
-                    <div class="tab-contents" Id="education">
-                        <ul>
-                            <li><span>2020</span><br>Design Training At NOVA</li>
-                            <li><span>2021</span><br>Online Developer</li>
-                            <li><span>2023</span><br>BBA from RISA</li>
-
-                        </ul>
-
-                    </div>
-                </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="about-col-1">
+            <img src="images/last.jpg" alt="" />
+          </div>
+          <div class="about-col-2">
+            <h1 class="sub-title">About Me</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+              dolor accusamus iusto corporis, at quaerat modi. Ipsam accusantium
+              a saepe.
+            </p>
+            <div class="tab-titles">
+              <p class="tab-links active-link" onclick="opentab('skills')">
+                Skills
+              </p>
+              <p class="tab-links" onclick="opentab('experience')">
+                Experience
+              </p>
+              <p class="tab-links" onclick="opentab('education')">Education</p>
             </div>
+            <div class="tab-contents active-tab" id="skills">
+              <ul>
+                <li><span>UI/UX</span><br />Designing Web/App interface</li>
+                <li><span>Web Development</span><br />Web app development</li>
+                <li>
+                  <span>App Development</span><br />Building Android/IOS apps
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="experience">
+              <ul>
+                <li><span>2021</span><br />Networking At IPRC NGOMA</li>
+                <li>
+                  <span>2019-2021</span><br />UI/UX Design at NOVA SERVICES LTD
+                </li>
+                <li><span>2016-2017</span><br />Internship at RISA</li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="education">
+              <ul>
+                <li><span>2020</span><br />Design Training At NOVA</li>
+                <li><span>2021</span><br />Online Developer</li>
+                <li><span>2023</span><br />BBA from RISA</li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
-    <!-- services -->
-
-
+    <!-- Services Section -->
     <div id="services">
-        <div class="container">
-            <h1 class="sub-title">My Services</h1>
-            <div class="services-list">
-                <div>
-                    <i class="fa-solid fa-u"></i>
-                    <h2>UI/UX Design</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, doloribus
-                        suscipit provident inventore eaque cum?</p>
-                    <a href="#">Learn more</a>
-
-                </div>
-                <div>
-                    <i class="fa-solid fa-w"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, doloribus
-                        suscipit provident inventore eaque cum?</p>
-                    <a href="#">Learn more</a>
-                </div>
-                <div>
-                    <i class="fa-solid fa-a"></i>
-                    <h2>App Design</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, doloribus
-                        suscipit provident inventore eaque cum?</p>
-                    <a href="#">Learn more</a>
-                </div>
-                <div>
-                    <i class="fa-solid fa-n"></i>
-                    <h2>Network Design</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, doloribus
-                        suscipit provident inventore eaque cum?</p>
-                    <a href="#">Learn more</a>
-                </div>
-
-            </div>
+      <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+          <div>
+            <i class="fa-solid fa-u"></i>
+            <h2>UI/UX Design</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequuntur, doloribus suscipit provident inventore eaque cum?
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-w"></i>
+            <h2>Web Design</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequuntur, doloribus suscipit provident inventore eaque cum?
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-a"></i>
+            <h2>App Design</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequuntur, doloribus suscipit provident inventore eaque cum?
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-n"></i>
+            <h2>Network Design</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequuntur, doloribus suscipit provident inventore eaque cum?
+            </p>
+            <a href="#">Learn more</a>
+          </div>
         </div>
+      </div>
     </div>
 
-
-    <!-- potfolio -->
+    <!-- Portfolio Section -->
     <div id="portfolio">
-        <div class="container">
-            <h1 class="sub-title">My Work</h1>
-            <div class="work-list">
-                <div class="work">
-                    <img src="images/4.PNG">
-                    <div class="layer">
-                        <h3>Socil Media App</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus quis cumque
-                            exercitationem ad odio nam?</p>
-                        <a href="#"><img src="images/41.PNG"></a>
-
-
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="images/5.PNG">
-                    <div class="layer">
-                        <h3>Online Shopping App</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus quis cumque
-                            exercitationem ad odio nam?</p>
-                        <a href="#"><img src="images/41.PNG"></a>
-
-
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="images/6.PNG">
-                    <div class="layer">
-                        <h3>Music App</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus quis cumque
-                            exercitationem ad odio nam?</p>
-                        <a href="#"><img src="images/41.PNG"></a>
-
-
-                    </div>
-                </div>
+      <div class="container">
+        <h1 class="sub-title">My Work</h1>
+        <div class="work-list">
+          <div class="work">
+            <img src="images/4.PNG" />
+            <div class="layer">
+              <h3>Social Media App</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Necessitatibus quis cumque exercitationem ad odio nam?
+              </p>
+              <a href="#"><img src="images/41.PNG" /></a>
             </div>
-            <a href="#" class="btn">See more</a>
+          </div>
+          <div class="work">
+            <img src="images/5.PNG" />
+            <div class="layer">
+              <h3>Online Shopping App</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Necessitatibus quis cumque exercitationem ad odio nam?
+              </p>
+              <a href="#"><img src="images/41.PNG" /></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="images/6.PNG" />
+            <div class="layer">
+              <h3>Music App</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Necessitatibus quis cumque exercitationem ad odio nam?
+              </p>
+              <a href="#"><img src="images/41.PNG" /></a>
+            </div>
+          </div>
         </div>
+        <a href="#" class="btn">See more</a>
+      </div>
     </div>
 
-    <!-- contact -->
+    <!-- Contact Section -->
     <div id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="contact-left">
-                    <h1 class="sub-title">Contact Me</h1>
-
-                    <p><i class="fa-solid fa-paper-plane"></i>contact@example.com</p>
-                    <p><i class="fa-solid fa-phone"></i>+250793815112</p>
-                    <div class="social-icons">
-                        <a href="https//facebook.com/racheal"><i class="fa-brands fa-facebook-f"></i>
-                            <a href="https//instagram.com/racheal"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="https//twitter.com/racheal"><i class="fa-brands fa-twitter"></i></a>
-                            <a href="https//fa-linkedin.com/racheal"><i class="fa-brands fa-linkedin"></i></a>
-
-
-
-
-
-                    </div>
-                    <a href="images/my cv.pdf" download class="btn btn2">Download CV</a>
-                </div>
-                <div class="contact-right">
-                    <form>
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="" name="number" placeholder="Your number" required>
-                        <input type="email" name="email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn btn2">submit</button>
-
-                    </form>
-                </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="contact-left">
+            <h1 class="sub-title">Contact Me</h1>
+            <p><i class="fa-solid fa-paper-plane"></i>contact@example.com</p>
+            <p><i class="fa-solid fa-phone"></i>+250793815112</p>
+            <div class="social-icons">
+              <a href="https://facebook.com/racheal"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+              <a href="https://instagram.com/racheal"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="https://twitter.com/racheal"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a href="https://linkedin.com/racheal"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
             </div>
+            <a href="images/my cv.pdf" download class="btn btn2">Download CV</a>
+          </div>
+          <div class="contact-right">
+            <form>
+              <input type="text" name="Name" placeholder="Your Name" required />
+              <input
+                type="text"
+                name="number"
+                placeholder="Your number"
+                required
+              />
+              <input
+                type="email"
+                name="email"
+                placeholder="Your Email"
+                required
+              />
+              <textarea
+                name="Message"
+                rows="6"
+                placeholder="Your Message"
+              ></textarea>
+              <button type="submit" class="btn btn2">Submit</button>
+            </form>
+          </div>
         </div>
-        <div class="Copyright1">
-            <p>@2024 All Right Reserved By Racheal  INGABIRE</p>
-        </div>
+      </div>
+      <div class="Copyright1">
+        <p>@2024 All Rights Reserved By Rachel Ingabire</p>
+      </div>
     </div>
-
-
-
 
     <script>
-        var tablinks = document.getElementsByClassName("tab-links");
-        var tabcontents = document.getElementsByClassName("tab-contents");
-        function opentab(tabname) {
-            for (tablink of tablinks) {
-                tablink.classlist.remove("active-link");
-            }
-            for (tabcontent of tabcontents) {
-                tabcontent.classlist.remove("active-tab");
-            }
-            event.currentTarget.classlist.add("active-link");
-            document.getElementById(tabname).classList.add("active-tab");
+      var tablinks = document.getElementsByClassName("tab-links");
+      var tabcontents = document.getElementsByClassName("tab-contents");
+      function opentab(tabname) {
+        for (var tablink of tablinks) {
+          tablink.classList.remove("active-link");
         }
-
+        for (var tabcontent of tabcontents) {
+          tabcontent.classList.remove("active-tab");
+        }
+        event.currentTarget.classList.add("active-link");
+        document.getElementById(tabname).classList.add("active-tab");
+      }
+      var sidemenu = document.getElementById("sidemenu");
+      function openmenu() {
+        sidemenu.style.right = "0";
+      }
+      function closemenu() {
+        sidemenu.style.right = "-200px";
+      }
     </script>
-
-    <!-- <script>
-        var sidemenu = document.getElementById("sidemenu");
-        function openmenu() {
-            sidemenu.style.right = "0";
-        }
-        function closemenu() {
-            sidemenu.style.right = "-200px";
-        }
-    </script> -->
-
-</body>
-
+  </body>
 </html>
