--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <a href="https://twitter.com/racheal"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://linkedin.com/racheal"><i class="fa-brands fa-linkedin"></i></a>
           </div>
-          <a href="images/my cv.pdf" download class="btn btn2">Download CV</a>
+          <a href="images/MY CV.pdf" download class="btn btn2">Download CV</a>
         </div>
         <div class="contact-right">
           <form>
