--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
             <a href="https://instagram.com/racheal"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://twitter.com/racheal"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://linkedin.com/racheal"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/racheal831>"><i class="fa-brands fa-github"></i></a>
+
           </div>
           <a href="images/MY CV.pdf" download class="btn btn2">Download CV</a>
         </div>
